# metaRTC

./: CMakeLists.txt  README.md  cmake_win32.bat  cmake_win64.bat
codec/yangwincodec6/: CMakeLists.txt
codec/yangwincodec6/codec/: YangH264EncoderGpu.cpp  YangH264EncoderGpu.h
demo/metademo/: CMakeLists.txt  main.cpp
include/: yang_config.h
libmetartc6/: CMakeLists.txt
libmetartccore6/: CMakeLists.txt
